--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@react-router/node": "^7.1.0",
     "@react-router/serve": "^7.1.0",
+    "framer-motion": "^11.15.0",
     "isbot": "^5.1.17",
+    "lenis": "^1.1.18",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.0"
