--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "lenis": "^1.1.18",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.1.0"
+    "react-icons": "^5.4.0",
+    "react-router": "^7.1.0",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.1.0",
